--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chen Ju - About Me</title>
+    <title>Chen Ju - AI, FinTech & Entrepreneurship</title>
     <style>
         * {
             margin: 0;
@@ -334,7 +334,7 @@ Master of Science in Digital Financial Technology, School of Computing<br>
 
 <div class="section-title">Achievements</div>
 <ul>
-<li>Dean's List (Top 5%) at NUS SoC – 2024 & 2025</li>
+<li>Dean's List (Top 5%) at NUS SoC (2024, 2025)</li>
 <li>Granted <strong>2 invention patents</strong> by China's State Intellectual Property Office (2017)</li>
 <li>Multiple <strong>Zheng Geru Scholarships</strong> at Tsinghua (2007, 2011)</li>
 <li><strong>Third-class Medal</strong> – People's Liberation Army (2010)</li>
@@ -344,7 +344,7 @@ Master of Science in Digital Financial Technology, School of Computing<br>
 <ul>
 <li><strong>Programming:</strong> C/C++, Java, PHP, HTML, JavaScript, Python, MATLAB</li>
 <li><strong>Languages:</strong> IELTS 7.5 (Listening 8.0, Reading 8.5, Speaking 6.5, Writing 6.5)</li>
-<li><strong>Interests:</strong> Cycling enthusiast – rode <strong>2,000+ km across Tibet Plateau</strong> (avg. altitude 4,000m+)</li>
+<li><strong>Sports:</strong> Cycling enthusiast – rode <strong>2,000+ km across Tibet Plateau</strong> (avg. altitude 4,000m+)</li>
 </ul>
 
 <div class="section-title">Summary</div>
