--- a/index.html
+++ b/index.html
@@ -290,13 +290,13 @@
 
 <div class="section-title">Education</div>
 <ul>
-<li><strong>National University of Singapore (2023–2025)</strong><br>
+<li><strong>National University of Singapore </strong><br>
 Master of Science in Digital Financial Technology, School of Computing<br>
 - Dean's List (Top 5%) in 2024 and 2025</li>
 <li><strong>Tsinghua University, Beijing</strong><br>
-- Master of Engineering, Department of Automation (2012–2016)<br>
+- Master of Engineering, Department of Automation <br>
 <em>Specialisation: Trusted identity management for the Internet of Things</em><br>
-- Bachelor of Engineering, Department of Automation (2006–2012)<br>
+- Bachelor of Engineering, Department of Automation <br>
 <em>Strong foundation in C/C++, Data Structures, Computer Networks, Control Theory, etc.</em></li>
 </ul>
 
@@ -349,7 +349,7 @@ Master of Science in Digital Financial Technology, School of Computing<br>
 
 <div class="section-title">Summary</div>
 
-Chen Ju is a tech-driven leader with expertise in <strong>AI, fintech, and enterprise operations</strong>, combining entrepreneurial experience (Zhaoxi), big tech leadership (ByteDance), and academic excellence (NUS & Tsinghua). His background spans <strong>building and scaling products, investment strategy, data analytics, and compliance/governance projects</strong>, making him well-positioned to drive innovation at the intersection of <strong>technology, finance, and global business</strong>.`;
+Chen Ju is a tech-driven leader with expertise in <strong>AI, fintech, and business operations</strong>, combining entrepreneurial experience (Zhaoxi), big tech leadership (ByteDance), and academic excellence (NUS & Tsinghua). His background spans <strong>building and scaling products, investment strategy, data analytics, and compliance/governance projects</strong>, making him well-positioned to drive innovation at the intersection of <strong>technology, finance, and global business</strong>.`;
 
         function addMessage(content, isUser = false) {
             const messageDiv = document.createElement('div');
