--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@ Master of Science in Digital Financial Technology, School of Computing<br>
 <strong>Head of Business Operations – SaaS Enterprise Products (2017–2020)</strong>
 <ul>
 <li>Built the business operations team for <strong>Lark</strong>, ByteDance's enterprise collaboration platform.</li>
-<li>Secured the first 100 clients (e.g., MissFresh, Amino) and built an ecosystem of 100+ partners (e.g., Deloitte China, Logitech).</li>
+<li>Secured the first 100 clients (e.g., MissFresh, Amino) and built an ecosystem of dozens of partners (e.g., Deloitte China, Logitech).</li>
 </ul>
 
 <div class="sub-title">Zhaoxi (2013–2017, acquired by ByteDance)</div>
