--- a/index.html
+++ b/index.html
@@ -253,12 +253,12 @@
     <div class="chat-container">
         <div class="chat-messages">
             <div id="initial-screen" class="initial-screen">
-                <h2 class="initial-title">Hi, how can I help you?</h2>
+                <h2 class="initial-title">Hi, how can I help?</h2>
                 <div class="input-container">
                     <svg class="plus-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"></path>
                     </svg>
-                    <input type="text" id="chat-input" class="chat-input" placeholder="Please tell me about Chen Ju." value="Please tell me about Chen Ju.">
+                    <input type="text" id="chat-input" class="chat-input" placeholder="Please tell me about Chen Ju." value="Can you tell me a bit about Chen Ju?">
                     <svg id="send-btn" class="send-icon active" fill="currentColor" viewBox="0 0 24 24">
                         <path d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"></path>
                     </svg>
@@ -395,7 +395,7 @@ Chen Ju is a tech-driven leader with expertise in <strong>AI, fintech, and busin
             chatConversation.classList.remove('hidden');
             
             // Add user message
-            addMessage('Please tell me about Chen Ju.', true);
+            addMessage('Can you tell me a bit about Chen Ju?', true);
             
             // Show typing indicator
             typingIndicator.style.display = 'block';
