--- a/index.html
+++ b/index.html
@@ -347,6 +347,12 @@ Master of Science in Digital Financial Technology, School of Computing<br>
 <li><strong>Sports:</strong> Cycling enthusiast – rode <strong>2,000+ km across Tibet Plateau</strong> (avg. altitude 4,000m+)</li>
 </ul>
 
+<div class="section-title">Personal Projects</div>
+<ul>
+<li><strong>LiteTodo:</strong> A WeChat-based AI personal scheduling assistant powered by DeepSeek. </li>
+<li><strong>ReadEase:</strong> A Chrome extension that extracts and summarizes articles using OpenAI API.</li>
+</ul>
+
 <div class="section-title">Summary</div>
 
 Chen Ju is a tech-driven leader with expertise in <strong>AI, fintech, and business operations</strong>, combining entrepreneurial experience (Zhaoxi), big tech leadership (ByteDance), and academic excellence (NUS & Tsinghua). His background spans <strong>building and scaling products, investment strategy, data analytics, and compliance/governance projects</strong>, making him well-positioned to drive innovation at the intersection of <strong>technology, finance, and global business</strong>.`;
