--- a/index.html
+++ b/index.html
@@ -247,6 +247,16 @@
         .hidden {
             display: none;
         }
+
+        /* Mobile-specific styles */
+        @media (max-width: 768px) {
+            .chat-messages {
+                padding: 20px 10px;
+            }
+            .assistant-message .message-content {
+                padding: 10px;
+            }
+        }
     </style>
 </head>
 <body>
