update body css for mobile

--- a/index.html
+++ b/index.html
@@ -250,6 +250,9 @@
 
         /* Mobile-specific styles */
         @media (max-width: 768px) {
+            body {
+                padding: 5px;
+            }
             .chat-messages {
                 padding: 20px 10px;
             }
