update welcome msg

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chen Ju - AI, FinTech & Entrepreneurship</title>
     <style>
         * {
             margin: 0;
@@ -270,7 +269,7 @@
                     <svg class="plus-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"></path>
                     </svg>
-                    <input type="text" id="chat-input" class="chat-input" placeholder="Please tell me about Chen Ju." value="Tell me about Chen Ju.">
+                    <input type="text" id="chat-input" class="chat-input" placeholder="Please tell me a bit about Chen Ju." value="Tell me a bit about Chen Ju.">
                     <svg id="send-btn" class="send-icon active" fill="currentColor" viewBox="0 0 24 24">
                         <path d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"></path>
                     </svg>
@@ -413,7 +412,7 @@ Chen Ju is a tech-driven leader with expertise in <strong>AI, fintech, and busin
             chatConversation.classList.remove('hidden');
             
             // Add user message
-            addMessage('Tell me about Chen Ju.', true);
+            addMessage('Tell me a bit about Chen Ju.', true);
             
             // Show typing indicator
             typingIndicator.style.display = 'block';
