--- a/index.html
+++ b/index.html
@@ -348,9 +348,9 @@ Master of Science in Digital Financial Technology, School of Computing<br></li>
 
 <div class="section-title">Achievements</div>
 <ul>
-<li>Dean's List (Top 5%) at NUS SoC (2024, 2025)</li>
+<li>Dean's List<strong> (Top 5%)</strong> at NUS SoC (2024, 2025)</li>
 <li>Granted <strong>2 invention patents</strong> by China's State Intellectual Property Office (2017)</li>
-<li><strong>Zheng Geru Scholarships</strong> at Tsinghua (2007, 2011)</li>
+<li>Zheng Geru Scholarships at Tsinghua (2007, 2011)</li>
 </ul>
 
 <div class="section-title">Skills</div>
