update Chinese version

--- a/index.html
+++ b/index.html
@@ -368,11 +368,11 @@
             zh: {
                 greeting: "你好！",
                 placeholder: {
-                    mobile: "请告诉我一些关于陈炬的信息。",
+                    mobile: "请介绍一下陈炬。",
                     pc: "能否告诉我一些关于陈炬的信息？"
                 },
                 userMessage: {
-                    mobile: "请告诉我一些关于陈炬的信息。",
+                    mobile: "请介绍一下陈炬。",
                     pc: "能否告诉我一些关于陈炬的信息？"
                 }
             }
@@ -452,37 +452,37 @@ Chen Ju is a tech-driven leader with expertise in <strong>AI, fintech, and busin
 Phone: +65 8067 9082<br>
 Email: chenju@u.nus.edu`;
 
-        const responseContentZh = `好的 — 这是<strong>陈炬</strong>的详细简介：
+        const responseContentZh = `好的 — 这是一份<strong>陈炬</strong>的简历：
 
 <div class="section-title">教育背景</div>
 <ul>
 <li><strong>新加坡国立大学</strong><br>
-计算机学院数字金融技术理学硕士<br></li>
+计算机学院金融科技硕士<br></li>
 <li><strong>清华大学</strong><br>
-- 自动化系工程硕士<br>
-- 自动化系工程学士<br></li>
+- 自动化系工学硕士<br>
+- 自动化系工学学士<br></li>
 </ul>
 
 <div class="section-title">工作经历</div>
 
 <div class="sub-title">字节跳动 (2017–2023)</div>
 
-<strong>高级项目经理 – 人力资源管理办公室 (2021–2023)</strong>
+<strong>高级项目经理 – 人力管理办公室 (2021–2023)</strong>
 <ul>
 <li>协调多个跨职能项目，包括人力资源数据合规、返岗策略和企业治理优化。</li>
-<li>通过数据驱动分析支持管理决策。</li>
+<li>通过数据驱动分析支持集团人力资源管理决策。</li>
 </ul>
 
 <strong>投后管理 – 战略投资部 (2020–2021)</strong>
 <ul>
-<li>使用Python自动化季度投资组合财务分析，提高准确性和效率。</li>
-<li>建立投后赋能计划，促进字节跳动与投资组合公司之间的合作。</li>
+<li>使用Python自动化投资组合季度财务分析，大幅提高分析准确性和效率。</li>
+<li>建立并推进字节投后赋能计划，促进数十个字节与投资组合公司之间的合作项目。</li>
 </ul>
 
-<strong>业务运营负责人 – SaaS企业产品 (2017–2020)</strong>
+<strong>商业化运营和渠道与生态负责人 – SaaS企业产品 (2017–2020)</strong>
 <ul>
-<li>为字节跳动的企业协作平台<strong>Lark</strong>组建业务运营团队。</li>
-<li>获得首批100个客户（如MissFresh、Amino），并建立数十个合作伙伴生态系统（如德勤中国、罗技）。</li>
+<li>为字节跳动的企业协作平台<strong>飞书</strong>组建商业化运营团队。</li>
+<li>负责飞书早期共创，获得首批100+种子客户（如坚果云、坚果云等）。构建飞书生态系统，与数十个高质量伙伴（如德勤中国、罗技）达成合作。</li>
 </ul>
 
 <div class="sub-title">朝夕日历 (2013–2017，被字节跳动收购)</div>
@@ -490,9 +490,8 @@ Email: chenju@u.nus.edu`;
 <strong>联合创始人兼首席运营官</strong>
 <ul>
 <li>共同创立<strong>朝夕日历</strong>，一个AI驱动的智能助手和社交日历。</li>
-<li>早期阶段：作为<strong>全栈开发者</strong>贡献（Java、PHP、JavaScript）。</li>
-<li>后期阶段：推动用户增长和商业化，通过精益营销获得<strong>500万+用户</strong>。</li>
-<li>在被字节跳动收购前筹集<strong>1000万+人民币风险投资</strong>。</li>
+<li>早期阶段：作为<strong>全栈开发者</strong>（Java、PHP、JavaScript）参与多项开发工作。</li>
+<li>后期阶段：作为COO和商业化负责人，推动用户增长和商业化，通过精准营销低成本获得<strong>数百万用户</strong>。</li>
 </ul>
 
 <div class="section-title">成就</div>
@@ -506,18 +505,18 @@ Email: chenju@u.nus.edu`;
 <ul>
 <li><strong>编程：</strong>Python、RAG(LLMs)、C/C++、Java、PHP、JavaScript、MATLAB</li>
 <li><strong>语言：</strong>雅思7.5分（听力8.0、阅读8.5、口语6.5、写作6.5）</li>
-<li><strong>运动：</strong>骑行爱好者 – 骑行<strong>2000+公里穿越青藏高原</strong>（平均海拔4000米+）</li>
+<li><strong>运动：</strong>骑行爱好者 – 2012年骑行<strong>2000+公里穿越青藏高原</strong>（平均海拔4000米+）</li>
 </ul>
 
 <div class="section-title">个人项目</div>
 <ul>
-<li><strong>LiteTodo：</strong>基于微信的AI个人日程助手，由DeepSeek驱动。</li>
+<li><strong>闪电待办：</strong>基于微信公众号的AI个人日程助手，由DeepSeek驱动。</li>
 <li><strong>ReadEase：</strong>Chrome扩展，使用OpenAI API从网页提取文章并总结内容。</li>
 </ul>
 
 <div class="section-title">总结</div>
 
-陈炬是一位技术驱动的领导者，在<strong>AI、金融科技和业务运营</strong>方面拥有专业知识，结合了创业经验（朝夕日历）、大科技领导力（字节跳动）和学术卓越（新加坡国立大学和清华大学）。他的背景涵盖<strong>构建和扩展产品、投资策略、数据分析和合规/治理项目</strong>，使他能够在<strong>技术、金融和全球商业</strong>的交叉点推动创新。
+陈炬是一位技术驱动的领导者，在<strong>AI、金融科技和商业化运营</strong>方面拥有专业知识。他拥有成功的创业经验（朝夕日历）、充分的大厂历练（字节跳动）和优秀的学历背景（新加坡国立大学和清华大学）。他的涵盖<strong>技术研发、产品运营和商业化</strong>的复合背景，使他能够在<strong>技术、产品和商业化</strong>的交叉点推动创新。
 
 <div class="section-title">联系方式</div>
 
