update Chinese version

--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@ Email: chenju@u.nus.edu`;
 
 <div class="section-title">总结</div>
 
-陈炬是一位技术驱动的领导者，在<strong>AI、金融科技和商业化运营</strong>方面拥有专业知识。他拥有成功的创业经验（朝夕日历）、充分的大厂历练（字节跳动）和优秀的学历背景（新加坡国立大学和清华大学）。他的涵盖<strong>技术研发、产品运营和商业化</strong>的复合背景，使他能够在<strong>技术、产品和商业化</strong>的交叉点推动创新。
+陈炬是一位技术驱动的领导者，在<strong>AI、金融科技和商业化运营</strong>方面拥有专业知识。他拥有成功的创业经验（朝夕日历）、充分的大厂历练（字节跳动）和优秀的学历背景（新加坡国立大学和清华大学）。他的复合背景，使他能够在<strong>技术、产品和商业化</strong>的交叉点推动创新。
 
 <div class="section-title">联系方式</div>
 
