--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@ Email: chenju@u.nus.edu`;
 <ul>
 <li>共同创立<strong>朝夕日历</strong>，一个AI驱动的智能助手和社交日历。</li>
 <li>早期阶段：作为<strong>全栈开发者</strong>（Java、PHP、JavaScript）参与多项开发工作。</li>
-<li>后期阶段：作为COO和商业化负责人，推动用户增长和商业化，通过精准营销低成本获得<strong>数百万用户</strong>。</li>
+<li>后期阶段：作为COO和商业化负责人，推动用户增长和商业化，通过精准营销低成本获得<strong>数百万用户</strong>，并实现盈利。朝夕于2017年被字节跳动收购，合并入飞书项目。</li>
 </ul>
 
 <div class="section-title">成就</div>
@@ -505,7 +505,7 @@ Email: chenju@u.nus.edu`;
 <ul>
 <li><strong>编程：</strong>Python、RAG(LLMs)、C/C++、Java、PHP、JavaScript、MATLAB</li>
 <li><strong>语言：</strong>雅思7.5分（听力8.0、阅读8.5、口语6.5、写作6.5）</li>
-<li><strong>运动：</strong>骑行爱好者 – 2012年骑行<strong>2000+公里穿越青藏高原</strong>（平均海拔4000米+）</li>
+<li><strong>运动：</strong>骑行爱好者，2012年骑行<strong>2000+公里穿越青藏高原</strong>（平均海拔4000米+）</li>
 </ul>
 
 <div class="section-title">个人项目</div>
