--- a/index.html
+++ b/index.html
@@ -479,10 +479,10 @@ Email: chenju@u.nus.edu`;
 <li>建立并推进字节投后赋能计划，促进数十个字节与投资组合公司之间的合作项目。</li>
 </ul>
 
-<strong>商业化运营和渠道与生态负责人 – SaaS企业产品 (2017–2020)</strong>
+<strong>商业化运营和生态与渠道负责人 – 企业SaaS应用 (2017–2020)</strong>
 <ul>
-<li>为字节跳动的企业协作平台<strong>飞书</strong>组建商业化运营团队。</li>
-<li>负责飞书早期共创，获得首批100+种子客户（如坚果云、坚果云等）。构建飞书生态系统，与数十个高质量伙伴（如德勤中国、罗技）达成合作。</li>
+<li>为字节跳动的企业协作平台<strong>飞书</strong>从零组建商业化运营团队。</li>
+<li>负责飞书早期共创，获得首批100+种子客户（如坚果云、坚果云等）。主导构建飞书生态系统，与数十个高质量伙伴（如德勤中国、罗技）达成合作。</li>
 </ul>
 
 <div class="sub-title">朝夕日历 (2013–2017，被字节跳动收购)</div>
