--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@ Master of Science in Digital Financial Technology, School of Computing<br></li>
 
 <strong>Head of Business Operations – SaaS Enterprise Products (2017–2020)</strong>
 <ul>
-<li>Built the business operations team for <strong>Lark</strong>, ByteDance's enterprise collaboration platform.</li>
+<li>Built the business operations team for <strong><a href="https://www.larksuite.com" target="_blank">Lark</a></strong>, ByteDance's enterprise collaboration platform.</li>
 <li>Secured the first 100 clients (e.g., MissFresh, Amino) and built an ecosystem of dozens of partners (e.g., Deloitte China, Logitech).</li>
 </ul>
 
@@ -425,7 +425,7 @@ Master of Science in Digital Financial Technology, School of Computing<br></li>
 
 <div class="section-title">Achievements</div>
 <ul>
-<li>Dean's List<strong> (Top 5%)</strong> at NUS SoC (2024, 2025)</li>
+<li>Dean's List<strong> (Top 5%)</strong> at NUS SoC (<a href="https://credentials.nus.edu.sg/91e726a8-e774-420c-aba7-5580832f73d5#acc.D6jd1Oq5" target="_blank">2024</a>, <a href="https://credentials.nus.edu.sg/81369ecc-0bb8-4140-b331-889d2fa7dca9#acc.dNotPYRh" target="_blank">2025</a>)</li>
 <li>Granted <strong>2 invention patents</strong> by China's State Intellectual Property Office (2017)</li>
 <li>Zheng Geru Scholarships at Tsinghua (2007, 2011)</li>
 </ul>
@@ -481,7 +481,7 @@ Email: chenju@u.nus.edu`;
 
 <strong>商业化运营和生态与渠道负责人 – 企业SaaS应用 (2017–2020)</strong>
 <ul>
-<li>为字节跳动的企业协作平台<strong>飞书</strong>从零组建商业化运营团队。</li>
+<li>为字节跳动的企业协作平台<strong><a href="https://www.feishu.cn" target="_blank">飞书</a></strong>从零组建商业化运营团队。</li>
 <li>负责飞书早期共创，获得首批100+种子客户（如坚果云、坚果云等）。主导构建飞书生态系统，与数十个高质量伙伴（如德勤中国、罗技）达成合作。</li>
 </ul>
 
@@ -496,7 +496,7 @@ Email: chenju@u.nus.edu`;
 
 <div class="section-title">成就</div>
 <ul>
-<li>新加坡国立大学计算机学院院长名单<strong>（前5%）</strong> (2024, 2025)</li>
+<li>新加坡国立大学计算机学院院长名单<strong>（前5%）</strong> (<a href="https://credentials.nus.edu.sg/91e726a8-e774-420c-aba7-5580832f73d5#acc.D6jd1Oq5" target="_blank">2024年</a>, <a href="https://credentials.nus.edu.sg/81369ecc-0bb8-4140-b331-889d2fa7dca9#acc.dNotPYRh" target="_blank">2025年</a>)</li>
 <li>获得中国国家知识产权局<strong>2项发明专利</strong> (2017)</li>
 <li>清华大学郑格如奖学金 (2007, 2011)</li>
 </ul>
