--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@ Master of Science in Digital Financial Technology, School of Computing<br></li>
 
 <strong>Head of Business Operations – SaaS Enterprise Products (2017–2020)</strong>
 <ul>
-<li>Built the business operations team for <strong><a href="https://www.larksuite.com" target="_blank">Lark</a></strong>, ByteDance's enterprise collaboration platform.</li>
+<li>Built the business operations team for <a href="https://www.larksuite.com" target="_blank">Lark</a>, ByteDance's enterprise collaboration platform.</li>
 <li>Secured the first 100 clients (e.g., MissFresh, Amino) and built an ecosystem of dozens of partners (e.g., Deloitte China, Logitech).</li>
 </ul>
 
@@ -452,16 +452,7 @@ Chen Ju is a tech-driven leader with expertise in <strong>AI, fintech, and busin
 Phone: +65 8067 9082<br>
 Email: chenju@u.nus.edu`;
 
-        const responseContentZh = `好的 — 这是一份<strong>陈炬</strong>的简历：
-
-<div class="section-title">教育背景</div>
-<ul>
-<li><strong>新加坡国立大学</strong><br>
-计算机学院金融科技硕士<br></li>
-<li><strong>清华大学</strong><br>
-- 自动化系工学硕士<br>
-- 自动化系工学学士<br></li>
-</ul>
+        const responseContentZh = `没问题，这是一份<strong>陈炬</strong>的个人简历：
 
 <div class="section-title">工作经历</div>
 
@@ -481,7 +472,7 @@ Email: chenju@u.nus.edu`;
 
 <strong>商业化运营和生态与渠道负责人 – 企业SaaS应用 (2017–2020)</strong>
 <ul>
-<li>为字节跳动的企业协作平台<strong><a href="https://www.feishu.cn" target="_blank">飞书</a></strong>从零组建商业化运营团队。</li>
+<li>为字节跳动的企业协作平台<a href="https://www.feishu.cn" target="_blank">飞书</a>从零组建商业化运营团队。</li>
 <li>负责飞书早期共创，获得首批100+种子客户（如坚果云、坚果云等）。主导构建飞书生态系统，与数十个高质量伙伴（如德勤中国、罗技）达成合作。</li>
 </ul>
 
@@ -494,10 +485,22 @@ Email: chenju@u.nus.edu`;
 <li>后期阶段：作为COO和商业化负责人，推动用户增长和商业化，通过精准营销低成本获得<strong>数百万用户</strong>，并实现盈利。朝夕于2017年被字节跳动收购，合并入飞书项目。</li>
 </ul>
 
+<div class="section-title">教育背景</div>
+<ul>
+<li><strong>新加坡国立大学</strong><br>
+计算机学院金融科技硕士<br>
+研究方向：AI大模型在私人银行领域的应用<br></li>
+<li><strong>清华大学</strong><br>
+自动化系工学硕士<br>
+研究方向：电子发票、可信身份管理等。<br>
+自动化系工学学士<br>
+主修课程：C/C++、计算机原理、计算机网络、数据库、概率与统计、数字电路、模式识别、运筹学、人工智能等。<br></li>
+</ul>
+
 <div class="section-title">成就</div>
 <ul>
 <li>新加坡国立大学计算机学院院长名单<strong>（前5%）</strong> (<a href="https://credentials.nus.edu.sg/91e726a8-e774-420c-aba7-5580832f73d5#acc.D6jd1Oq5" target="_blank">2024年</a>, <a href="https://credentials.nus.edu.sg/81369ecc-0bb8-4140-b331-889d2fa7dca9#acc.dNotPYRh" target="_blank">2025年</a>)</li>
-<li>获得中国国家知识产权局<strong>2项发明专利</strong> (2017)</li>
+<li>获得中国国家知识产权局<strong> 2 项发明专利</strong> (2017)</li>
 <li>清华大学郑格如奖学金 (2007, 2011)</li>
 </ul>
 
