--- a/index.html
+++ b/index.html
@@ -382,17 +382,7 @@
 
         const responseContentEn = `Sure — here's a detailed profile of <strong>Chen Ju</strong>:
 
-<div class="section-title">Education</div>
-<ul>
-<li><strong>National University of Singapore </strong><br>
-Master of Science in Digital Financial Technology, School of Computing<br></li>
-<li><strong>Tsinghua University</strong><br>
-- Master of Engineering, Department of Automation <br>
-- Bachelor of Engineering, Department of Automation <br></li>
-</ul>
-
 <div class="section-title">Professional Experience</div>
-
 <div class="sub-title">ByteDance (2017–2023)</div>
 
 <strong>Senior Project Manager – HR Management Office (2021–2023)</strong>
@@ -423,6 +413,16 @@ Master of Science in Digital Financial Technology, School of Computing<br></li>
 <li>Raised <strong>10M+ RMB venture funding</strong> before acquisition by ByteDance.</li>
 </ul>
 
+<div class="section-title">Education</div>
+<ul>
+<li><strong>National University of Singapore (2023–2025)</strong><br>
+Master of Science in Digital Financial Technology, School of Computing<br>
+- <em>Capstone project: LLM-Powered AI Assistant for Private Banking</em><br></li>
+<li><strong>Tsinghua University (2006–2016)</strong><br>
+Master of Engineering, Department of Automation <br>
+Bachelor of Engineering, Department of Automation <br></li>
+</ul>
+
 <div class="section-title">Achievements</div>
 <ul>
 <li>Dean's List<strong> (Top 5%)</strong> at NUS SoC (<a href="https://credentials.nus.edu.sg/91e726a8-e774-420c-aba7-5580832f73d5#acc.D6jd1Oq5" target="_blank">2024</a>, <a href="https://credentials.nus.edu.sg/81369ecc-0bb8-4140-b331-889d2fa7dca9#acc.dNotPYRh" target="_blank">2025</a>)</li>
@@ -441,6 +441,7 @@ Master of Science in Digital Financial Technology, School of Computing<br></li>
 <ul>
 <li><strong>LiteTodo:</strong> A WeChat-based AI personal scheduling assistant powered by DeepSeek. </li>
 <li><strong>ReadEase:</strong> A Chrome extension that extracts articles from webpages and summarizes content using OpenAI API.</li>
+<li><strong>QBook.ai:</strong> An AI-powered adaptive learning tool that helps users perpare for exams smarter with personalized practice.</li>
 </ul>
 
 <div class="section-title">Summary</div>
@@ -515,6 +516,7 @@ Email: chenju@u.nus.edu`;
 <ul>
 <li><strong>闪电待办：</strong>基于微信公众号的AI个人日程助手，由DeepSeek驱动。</li>
 <li><strong>ReadEase：</strong>Chrome扩展，使用OpenAI API从网页提取文章并总结内容。</li>
+<li><strong>QBook.ai：</strong>一款AI驱动的适应性学习工具，帮助用户高效练习，轻松备考。</li>
 </ul>
 
 <div class="section-title">总结</div>
