--- a/index.html
+++ b/index.html
@@ -216,9 +216,8 @@
 
         .sub-title {
             font-weight: 600;
-            color: #495057;
             margin: 20px 0 10px 0;
-            font-size: 16px;
+            font-size: 18px;
         }
 
         .highlight {
@@ -425,7 +424,7 @@ Bachelor of Engineering, Department of Automation <br></li>
 
 <div class="section-title">Achievements</div>
 <ul>
-<li>Dean's List<strong> (Top 5%)</strong> at NUS SoC (<a href="https://credentials.nus.edu.sg/91e726a8-e774-420c-aba7-5580832f73d5#acc.D6jd1Oq5" target="_blank">2024</a>, <a href="https://credentials.nus.edu.sg/81369ecc-0bb8-4140-b331-889d2fa7dca9#acc.dNotPYRh" target="_blank">2025</a>)</li>
+<li>Dean's List<strong> (Top 5%)</strong> at NUS School of Computing (<a href="https://credentials.nus.edu.sg/91e726a8-e774-420c-aba7-5580832f73d5#acc.D6jd1Oq5" target="_blank">2024</a>, <a href="https://credentials.nus.edu.sg/81369ecc-0bb8-4140-b331-889d2fa7dca9#acc.dNotPYRh" target="_blank">2025</a>)</li>
 <li>Granted <strong>2 invention patents</strong> by China's State Intellectual Property Office (2017)</li>
 <li>Zheng Geru Scholarships at Tsinghua (2007, 2011)</li>
 </ul>
